// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactThreeTestRenderer Core correctly builds a tree 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "props": Object {
                  "array": Float32Array [
                    -1,
                    -1,
                    1,
                    1,
                    -1,
                    1,
                    1,
                    1,
                    1,
                    1,
                    1,
                    1,
                    -1,
                    1,
                    1,
                    -1,
                    -1,
                    1,
                  ],
                  "attachObject": Array [
                    "attributes",
                    "position",
                  ],
                  "count": 6,
                  "itemSize": 3,
                },
                "type": "bufferAttribute",
              },
            ],
            "props": Object {
              "attach": "geometry",
            },
            "type": "bufferGeometry",
          },
          Object {
            "children": Array [],
            "props": Object {
              "attach": "material",
              "color": "hotpink",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": Object {},
        "type": "mesh",
      },
      Object {
        "children": Array [],
        "props": Object {
          "args": Array [
            0,
            0,
            255,
          ],
          "attach": "background",
        },
        "type": "color",
      },
    ],
    "props": Object {
      "position": Array [
        1,
        2,
        3,
      ],
    },
    "type": "group",
  },
]
`;

exports[`ReactThreeTestRenderer Core toTree() handles complicated tree of fragments 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "props": Object {
          "args": Array [
            0,
            0,
            0,
          ],
          "attach": "background",
        },
        "type": "color",
      },
    ],
    "props": Object {},
    "type": "group",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "props": Object {
          "args": Array [
            0,
            0,
            255,
          ],
          "attach": "background",
        },
        "type": "color",
      },
    ],
    "props": Object {},
    "type": "group",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "props": Object {
          "args": Array [
            255,
            0,
            0,
          ],
          "attach": "background",
        },
        "type": "color",
      },
    ],
    "props": Object {},
    "type": "group",
  },
]
`;

exports[`ReactThreeTestRenderer Core updates children 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "props": Object {
              "args": Array [
                2,
                2,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          Object {
            "children": Array [],
            "props": Object {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": Object {
          "position-z": 12,
        },
        "type": "mesh",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "props": Object {
              "args": Array [
                4,
                4,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          Object {
            "children": Array [],
            "props": Object {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": Object {
          "position-y": 12,
        },
        "type": "mesh",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "props": Object {
              "args": Array [
                6,
                6,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          Object {
            "children": Array [],
            "props": Object {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": Object {
          "position-x": 12,
        },
        "type": "mesh",
      },
    ],
    "props": Object {},
    "type": "group",
  },
]
`;

exports[`ReactThreeTestRenderer Core updates children 2`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "props": Object {
              "args": Array [
                6,
                6,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          Object {
            "children": Array [],
            "props": Object {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": Object {
          "rotation-x": 1,
        },
        "type": "mesh",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "props": Object {
              "args": Array [
                4,
                4,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          Object {
            "children": Array [],
            "props": Object {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": Object {
          "position-y": 12,
        },
        "type": "mesh",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "props": Object {
              "args": Array [
                2,
                2,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          Object {
            "children": Array [],
            "props": Object {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": Object {
          "position-x": 12,
        },
        "type": "mesh",
      },
    ],
    "props": Object {},
    "type": "group",
  },
]
`;
